# meta-list

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: README.md  datatable.cpp
include/meta-list/: algorithm.hpp  meta_list_ns.hpp  type.hpp
include/meta-list/algo/: append.hpp  concat.hpp  contain.hpp  convert_from.hpp  convert_to.hpp  filter.hpp  fold_left.hpp  is_pred_satisfied.hpp  partition.hpp  pipe_adapter.hpp  prepend.hpp  transform.hpp  unique.hpp
include/meta-list/concept/: list.hpp  value_or_type.hpp
include/meta-list/types/: dispatch_value.hpp  pair_c.hpp  type_c.hpp  type_list.hpp  value_c.hpp
include/value-list/: algorithm.hpp  type.hpp  value_list_ns.h  value_list_ns.hpp
include/value-list/algo/: append.h  append.hpp  concat.hpp  contain.hpp  convert_from.hpp  convert_to.hpp  enumerate.hpp  filter.h  filter.hpp  flatten.hpp  fold_left.h  fold_left.hpp  is_pred_satisfied.hpp  partition.hpp  pipe_adapter.h  pipe_adapter.hpp  prepend.h  prepend.hpp  transform.h  transform.hpp  unique.hpp
include/value-list/concept/: list.h  list.hpp  value_or_type.h  value_or_type.hpp
include/value-list/types/: dispatch_value.h  dispatch_value.hpp  pair_c.hpp  type_c.h  type_c.hpp  type_list.hpp  value_c.h  value_c.hpp  value_list_t.h  value_list_t.hpp
test/ut/: test_value_list.cpp
